# binocle-c-examples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
basic/: CMakeLists.txt  binocle.json
basic/assets/shaders/gles/: default.vert
basic/src/: main.c
ecs/: CMakeLists.txt  binocle.json
ecs/assets/shaders/gles/: screen.vert
ecs/src/: main.c
game-template/: .gitignore  CMakeLists.txt  binocle.json
game-template/assets/img/: bullet.aseprite  hero.aseprite  jump.aseprite  land.aseprite
game-template/assets/maps/: map01.json  map01.tmx
game-template/assets/shaders/gl33/: screen.frag
game-template/src/: cache.c  cache.h  cooldown.c  cooldown.h  cute_tiled.h  entity.c  entity.h  game_camera.c  game_camera.h  l_point.c  l_point.h  level.c  level.h  m.c  m.h  main.c  scene.c  scene.h  systems.c  systems.h  types.h
game-template/src/en/: bullet.c  bullet.h  fx.c  fx.h  hero.c  hero.h
game-template/src/gui/: cimgui.cpp  debug_gui.c  debug_gui.h  gui.c  gui.h
game-template/src/scenes/: game.c  game.h  intro.c  intro.h
lua/: CMakeLists.txt  binocle.json
lua/assets/: main.lua
lua/assets/shaders/gl33/: screen.vert
lua/assets/shaders/gles/: screen.frag
lua/src/: main.c
model/: CMakeLists.txt  binocle.json
model/assets/: blender.model  blender.mtl  chr_knight.model  cube.blend  cube.blend1  cube.model  cube2.model  cube2.mtl  default.frag  default.vert  lamp.frag  lamp.vert  lowpoly.mtl
model/src/: main.c
pbr/: CMakeLists.txt  binocle.json
pbr/assets/: default.frag  default.vert  lamp.frag  lamp.vert  sphere.blend  sphere.model  sphere.mtl  sphere2.blend  sphere2.blend1  sphere2.mtl
pbr/src/: main.c
physics/: CMakeLists.txt  binocle.json
physics/src/: main.c
rendertarget/: CMakeLists.txt  binocle.json
rendertarget/src/: main.c
spatialhash/: CMakeLists.txt  binocle.json
spatialhash/src/: main.c
spritebatch/: CMakeLists.txt  binocle.json
spritebatch/src/: main.c
